--- a/index.html
+++ b/index.html
@@ -1,6 +1,89 @@
+<!DOCTYPE html>
 <html>
+<head>
+<meta charset="UTF-8">
+<title>五子棋</title>
+<link href="h.css" rel="stylesheet" type="text/css" />
+<link href="button.css" rel="stylesheet" type="text/css" />
+<style>
+button{
+	color:white;
+	font-size:50px;
+	background-color:#6a8;
+	border-radius:40px;
+	width:264px;
+	height:132px;
+	text-align:center;
+	line-height:60px;
+	margin-bottom:50px;
+}
+img{
+	position:absolute;
+	left:0px;
+	top:0px;
+	z-index:-1;
+	height:600px;
+	width:400px;
+}
+</style>
+<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+<script>
+eruda.init();
+console.log('控制台打印信息');
+</script>
+</head>
 <body>
-<h1>HELLO</h1>
-<p onclick="alert('test');">this is a test.</p>
+
+<img src="background.jpg" id="img" style="margin:auto;width:100%;height:100%;" />
+<h1 id="h1" style="font-size:100px;">五子棋</h1>
+<div style="margin:auto;width:25%;">
+	<button onclick="location.href='two.html';" title="点击进入双人对战">双人对战</button><br>
+	<button onclick="location.href='one1.html';" title="点击进入人机对战（算法1）">人机对战</button><br>
+	<button onclick="location.href='one2.html';" title="点击进入人机对战（算法2）">人机对战2</button><br>
+</div>
+
+<script>
+{
+	let message="五子棋";
+	let i=0;
+	let j=1;
+	let fx="1"; //方向
+	setInterval(function(){
+		document.title=String(message).substring(0,i)+"_";
+		if (i < 0){
+			if (j == 1){
+				message="welcome to 五子棋";
+				j++;
+			}else if (j == 2){
+				j=1;
+				message="五子棋";
+			}else if (j == 3){
+				j=1;
+				message="MADE BY WZH";
+			}
+			fx*=(-1);
+			i=Number(i)+Number(fx);
+		}else if (i < message.length){
+			i=Number(i)+Number(fx);
+		}else{
+			fx*=(-1);
+			i=Number(i)+Number(fx);
+		}
+	},300); 
+}
+
+/*
+　┐ ├┬─┐ ┌──┼┼┐
+　│ ││　 ┌──┼┼┐
+  │╯├─┐ ╭──┴╯   W
+  └╯│   ┌────┐    Z
+　│　├─┐ ├────┤    H
+　╰┘└　 └────╯
+© by WZH
+此文件为WZH所有
+禁止任何修改，抄袭！
+*/
+</script>
+
 </body>
 </html>
