--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ console.log('控制台打印信息');
   │╯├─┐ ╭──┴╯   W
   └╯│   ┌────┐    Z
 　│　├─┐ ├────┤    H
-　╰┘└　 └────╯
-© by WZH
-此文件为WZH所有
+　╰┘└　 └────╯      656
+© by WZH656
+此文件为WZH656所有
 禁止任何修改，抄袭！
 */
 </script>
