--- a/one1.html
+++ b/one1.html
@@ -340,9 +340,9 @@ function computer_play(){
   │╯├─┐ ╭──┴╯   W
   └╯│   ┌────┐    Z
 　│　├─┐ ├────┤    H
-　╰┘└　 └────╯
-© by WZH
-此文件为WZH所有
+　╰┘└　 └────╯      656
+© by WZH656
+此文件为WZH656所有
 禁止任何修改，抄袭！
 */
 
