--- a/two.html
+++ b/two.html
@@ -150,9 +150,9 @@ document.onmousedown = function(e){
   │╯├─┐ ╭──┴╯   W
   └╯│   ┌────┐    Z
 　│　├─┐ ├────┤    H
-　╰┘└　 └────╯
-© by WZH
-此文件为WZH所有
+　╰┘└　 └────╯      656
+© by WZH656
+此文件为WZH656所有
 禁止任何修改，抄袭！
 */
 
