--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <link href="h.css" rel="stylesheet" type="text/css" />
 <link href="button.css" rel="stylesheet" type="text/css" />
 <style>
+h1{
+	margin-bottom:6%;
+}
 button{
 	color:white;
 	font-size:50px;
@@ -15,7 +18,7 @@ button{
 	height:132px;
 	text-align:center;
 	line-height:60px;
-	margin-bottom:50px;
+	margin-bottom:20%;
 }
 img{
 	position:absolute;
@@ -26,26 +29,39 @@ img{
 	width:400px;
 }
 </style>
+
 <script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>
 eruda.init();
 console.log('控制台打印信息');
 </script>
+
 </head>
 <body>
 
-<img src="background1.jpg" id="img" style="margin:auto;width:100%;height:100%;" />
+<img id="img" style="margin:auto;width:100%;height:100%;" />
 <script>
 if (screen.availHeight < screen.availWidth){
 	document.getElementById("img").src="background2.jpg";
+	console.log("横屏（电脑）");
 }else{
 	document.getElementById("img").src="background1.jpg";
+	console.log("竖屏（手机）");
 }
+setInterval(function(){
+	if (screen.availHeight < screen.availWidth){
+		document.getElementById("img").src="background2.jpg";
+		console.log("横屏（电脑）");
+	}else{
+		document.getElementById("img").src="background1.jpg";
+		console.log("竖屏（手机）");
+	}
+},2000);
 </script>
 <h1 id="h1" style="font-size:100px;">五子棋</h1>
 <div style="margin:auto;width:25%;">
 	<button onclick="location.href='two.html';" title="点击进入双人对战">双人对战</button><br>
-	<button onclick="location.href='one1.html';" title="点击进入人机对战（算法1）">人机对战</button><br>
+	<button onclick="location.href='one1.html';" title="点击进入人机对战（算法1）">人机对战1</button><br>
 	<button onclick="location.href='one2.html';" title="点击进入人机对战（算法2）">人机对战2</button><br>
 </div>
 
