--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="button.css" rel="stylesheet" type="text/css" />
 <style>
 h1{
-	margin-bottom:6%;
+	/*margin-bottom:0px;*/
 }
 button{
 	color:white;
@@ -18,7 +18,7 @@ button{
 	height:132px;
 	text-align:center;
 	line-height:60px;
-	margin-bottom:20%;
+	/*margin-top:20%;*/
 }
 img{
 	position:absolute;
@@ -30,6 +30,7 @@ img{
 }
 </style>
 
+<script src="jq.js"></script>
 <script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>
 eruda.init();
@@ -40,24 +41,6 @@ console.log('控制台打印信息');
 <body>
 
 <img id="img" style="margin:auto;width:100%;height:100%;" />
-<script>
-if (screen.availHeight < screen.availWidth){
-	document.getElementById("img").src="background2.jpg";
-	console.log("横屏（电脑）");
-}else{
-	document.getElementById("img").src="background1.jpg";
-	console.log("竖屏（手机）");
-}
-setInterval(function(){
-	if (screen.availHeight < screen.availWidth){
-		document.getElementById("img").src="background2.jpg";
-		console.log("横屏（电脑）");
-	}else{
-		document.getElementById("img").src="background1.jpg";
-		console.log("竖屏（手机）");
-	}
-},2000);
-</script>
 <h1 id="h1" style="font-size:100px;">五子棋</h1>
 <div style="margin:auto;width:25%;">
 	<button onclick="location.href='two.html';" title="点击进入双人对战">双人对战</button><br>
@@ -65,6 +48,33 @@ setInterval(function(){
 	<button onclick="location.href='one2.html';" title="点击进入人机对战（算法2）">人机对战2</button><br>
 </div>
 
+<script>
+if (screen.availHeight < screen.availWidth){
+	$("#img")[0].src="background2.jpg";
+	$("button").css("margin-top","15%");
+	$("h1").css("margin-bottom","0px");
+	console.log("横屏（电脑）");
+}else{
+	$("#img")[0].src="background1.jpg";
+	$("button").css("margin-top","30%");
+	$("h1").css("margin-bottom","");
+	console.log("竖屏（手机）");
+}
+
+setInterval(function(){
+	if (screen.availHeight < screen.availWidth){
+		$("#img")[0].src="background2.jpg";
+		$("button").css("margin-top","15%");
+		$("h1").css("margin-bottom","0px");
+		console.log("横屏（电脑）");
+	}else{
+		$("#img")[0].src="background1.jpg";
+		$("button").css("margin-top","30%");
+		$("h1").css("margin-bottom","");
+		console.log("竖屏（手机）");
+	}
+},2000);
+</script>
 <script>
 {
 	let message="五子棋";
