--- a/one2.html
+++ b/one2.html
@@ -79,7 +79,7 @@ var message=document.getElementById("message");
 var length=document.getElementById("length");
 message.innerHTML="下棋方："+xqf;
 
-over=false; //结束
+type="loading"; //状态
 length.innerHTML=0; //步数
 qz=new Array;
 for (var i=-5;i<19+5;i++){
@@ -100,6 +100,7 @@ var img=new Image;
 img.src="qp.jpg";
 img.onload = function() {
 	ctx.drawImage(img,0,0);
+	type="playing";
 	if (computer == xqf){
 		computer_play();
 	}
@@ -110,7 +111,7 @@ document.onmousedown = function(e){
 	var x=Math.round((e.pageY-270)/24.5);
 	
 	console.log(e.pageX+","+e.pageY+"（"+x+","+y+"）");
-	if (qz[x][y] != undefined & qz[x][y] == "" & over == false){
+	if (qz[x][y] != undefined & qz[x][y] == "" & type == "playing"){
 		length.innerHTML=Number(length.innerHTML)+1;
 		qz[x][y]=xqf;
 		if (xqf == "黑棋"  & computer != "黑棋"){
@@ -137,27 +138,25 @@ document.onmousedown = function(e){
 			computer_play();
 		}
 		
-		if (over == false){
-			for (var i in qz){
-				for (var j in qz[i]){
-					if (qz[i][j] != "" & qz[i][j] != undefined){
-						if (
-							(qz[i][j] == qz[i][Number(j)+1] & qz[i][j] == qz[i][Number(j)+2] & qz[i][j] == qz[i][Number(j)+3] & qz[i][j] == qz[i][Number(j)+4]) |
-							(qz[i][j] == qz[i][Number(j)-1] & qz[i][j] == qz[i][Number(j)-2] & qz[i][j] == qz[i][Number(j)-3] & qz[i][j] == qz[i][Number(j)-4]) |
-							(qz[i][j] == qz[Number(i)+1][j] & qz[i][j] == qz[Number(i)+2][j] & qz[i][j] == qz[Number(i)+3][j] & qz[i][j] == qz[Number(i)+4][j]) |
-							(qz[i][j] == qz[Number(i)-1][j] & qz[i][j] == qz[Number(i)-2][j] & qz[i][j] == qz[Number(i)-3][j] & qz[i][j] == qz[Number(i)-4][j]) |
-							(qz[i][j] == qz[Number(i)+1][Number(j)+1] & qz[i][j] == qz[Number(i)+2][Number(j)+2] & qz[i][j] == qz[Number(i)+3][Number(j)+3] & qz[i][j] == qz[Number(i)+4][Number(j)+4]) |
-							(qz[i][j] == qz[Number(i)+1][Number(j)-1] & qz[i][j] == qz[Number(i)+2][Number(j)-2] & qz[i][j] == qz[Number(i)+3][Number(j)-3] & qz[i][j] == qz[Number(i)+4][Number(j)-4]) |
-							(qz[i][j] == qz[Number(i)-1][Number(j)-1] & qz[i][j] == qz[Number(i)-2][Number(j)-2] & qz[i][j] == qz[Number(i)-3][Number(j)-3] & qz[i][j] == qz[Number(i)-4][Number(j)-4]) |
-							(qz[i][j] == qz[Number(i)-1][Number(j)+1] & qz[i][j] == qz[Number(i)-2][Number(j)+2] & qz[i][j] == qz[Number(i)-3][Number(j)+3] & qz[i][j] == qz[Number(i)-4][Number(j)+4])	
-						){
-							message.innerHTML="Game over\n"+qz[i][j]+"胜！！！";
-							setTimeout(function (){
-								over=true;
-								alert("历经"+length.innerHTML+"步\n"+qz[i][j]+"胜！！！");
-							},1);
-							return ;
-						}
+		for (var i in qz){
+			for (var j in qz[i]){
+				if (qz[i][j] != "" & qz[i][j] != undefined){
+					if (
+						(qz[i][j] == qz[i][Number(j)+1] & qz[i][j] == qz[i][Number(j)+2] & qz[i][j] == qz[i][Number(j)+3] & qz[i][j] == qz[i][Number(j)+4]) |
+						(qz[i][j] == qz[i][Number(j)-1] & qz[i][j] == qz[i][Number(j)-2] & qz[i][j] == qz[i][Number(j)-3] & qz[i][j] == qz[i][Number(j)-4]) |
+						(qz[i][j] == qz[Number(i)+1][j] & qz[i][j] == qz[Number(i)+2][j] & qz[i][j] == qz[Number(i)+3][j] & qz[i][j] == qz[Number(i)+4][j]) |
+						(qz[i][j] == qz[Number(i)-1][j] & qz[i][j] == qz[Number(i)-2][j] & qz[i][j] == qz[Number(i)-3][j] & qz[i][j] == qz[Number(i)-4][j]) |
+						(qz[i][j] == qz[Number(i)+1][Number(j)+1] & qz[i][j] == qz[Number(i)+2][Number(j)+2] & qz[i][j] == qz[Number(i)+3][Number(j)+3] & qz[i][j] == qz[Number(i)+4][Number(j)+4]) |
+						(qz[i][j] == qz[Number(i)+1][Number(j)-1] & qz[i][j] == qz[Number(i)+2][Number(j)-2] & qz[i][j] == qz[Number(i)+3][Number(j)-3] & qz[i][j] == qz[Number(i)+4][Number(j)-4]) |
+						(qz[i][j] == qz[Number(i)-1][Number(j)-1] & qz[i][j] == qz[Number(i)-2][Number(j)-2] & qz[i][j] == qz[Number(i)-3][Number(j)-3] & qz[i][j] == qz[Number(i)-4][Number(j)-4]) |
+						(qz[i][j] == qz[Number(i)-1][Number(j)+1] & qz[i][j] == qz[Number(i)-2][Number(j)+2] & qz[i][j] == qz[Number(i)-3][Number(j)+3] & qz[i][j] == qz[Number(i)-4][Number(j)+4])	
+					){
+						message.innerHTML="Game over\n"+qz[i][j]+"胜！！！";
+						setTimeout(function (){
+							type="over";
+							alert("历经"+length.innerHTML+"步\n"+qz[i][j]+"胜！！！");
+						},1);
+						return ;
 					}
 				}
 			}
