--- a/two.html
+++ b/two.html
@@ -25,13 +25,13 @@ button{
 <body>
 
 <button onclick="location.href='index.html';" id="back">返回</button>
-<button onclick="location.href='two.html';" id="again_two">重来</button>
+<button onclick="location.reload(false);" id="again_two">重来</button>
 
 <h1 id="h1" style="text-align:center;font-size:50px;">五子棋-双人对战</h1>
 <br/><b id="message">下棋方：黑棋</b>
 <br>
-<canvas id="qp" width="500" height="500" style="border:1px solid black;">你的浏览器不支持“五子棋”，请切换浏览器。</canvas>
-<p>步数：<span id="length">0</span></p>
+<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:10px;top:216px;">你的浏览器不支持“五子棋”，请切换浏览器。</canvas>
+<p style="position:absolute;top:716px;">步数：<span id="length">0</span></p>
 
 <script>
 {
@@ -83,7 +83,7 @@ for (var i=-5;i<19+5;i++){
 }
 var ctx=document.getElementById("qp").getContext("2d");
 ctx.font="30px Arial";
-ctx.fillText("找不到“棋盘.jpg”！",100,200);
+ctx.fillText("棋盘加载中……",100,200);
 
 var img=new Image;
 img.src="qp.jpg";
