--- a/index.html
+++ b/index.html
@@ -7,26 +7,36 @@
 <link href="button.css" rel="stylesheet" type="text/css" />
 <style>
 h1{
-	/*margin-bottom:0px;*/
+	margin:auto;
+	margin-bottom:0px;
 }
 button{
-	color:white;
+	width:266px;
+	height:136px;
+	
 	font-size:50px;
+	
+	color:white;
 	background-color:#6a8;
+	
+	font-size:50px;
+	
 	border-radius:40px;
-	width:264px;
-	height:132px;
+	
 	text-align:center;
 	line-height:60px;
-	/*margin-top:20%;*/
+	
+	margin-top:15%;
 }
 img{
+	height:600px;
+	width:400px;
+	
 	position:absolute;
 	left:0px;
 	top:0px;
+	
 	z-index:-1;
-	height:600px;
-	width:400px;
 }
 </style>
 
@@ -42,10 +52,10 @@ console.log('控制台打印信息');
 
 <img id="img" style="margin:auto;width:100%;height:100%;" />
 <h1 id="h1" style="font-size:100px;">五子棋</h1>
-<div style="margin:auto;width:25%;">
-	<button onclick="location.href='two.html';" title="点击进入双人对战">双人对战</button><br>
-	<button onclick="location.href='one1.html';" title="点击进入人机对战（算法1）">人机对战1</button><br>
-	<button onclick="location.href='one2.html';" title="点击进入人机对战（算法2）">人机对战2</button><br>
+<div style="margin:auto;width:266px;">
+	<button onclick="location.href='two.html';" title="点击进入双人对战" style="position:relative;">双人对战</button><br>
+	<button onclick="location.href='one1.html';" title="点击进入人机对战（算法1）" style="position:relative;">人机对战1</button><br>
+	<button onclick="location.href='one2.html';" title="点击进入人机对战（算法2）" style="position:relative;">人机对战2</button><br>
 </div>
 
 <script>
