--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
 <title>五子棋</title>
 <link href="h.css" rel="stylesheet" type="text/css" />
 <link href="button.css" rel="stylesheet" type="text/css" />
