--- a/one1.html
+++ b/one1.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>五子棋-人机对战</title>
-<link href="h.css" rel="stylesheet" type="text/css" />
-<link href="button.css" rel="stylesheet" type="text/css" />
+<link href="./css/title.css" rel="stylesheet" type="text/css" />
+<link href="./css/button.css" rel="stylesheet" type="text/css" />
+<link href="./css/p.css" rel="stylesheet" type="text/css" />
+<link href="./css/clear.css" rel="stylesheet" type="text/css" />
 
 <script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>
@@ -13,6 +15,11 @@ console.log('控制台打印信息');
 </script>
 
 <style>
+@font-face{
+	font-family:fzybxskt; /*方正硬笔行书楷体*/
+	src:url("../fonts/fzybxskt.ttf");
+}
+
 button{
 	color:white;
 	background-color:#6a8;
@@ -26,16 +33,17 @@ button{
 </head>
 <body>
 
-<button onclick="location.href='index.html';" id="back">返回</button>
-<button onclick="location.reload(false);" id="again_two">重来</button>
+<button onclick="location.href='./index.html';" id="back">返回</button>
+<button onclick="init();" id="again_two">重来</button>
 
 <h1 id="h1" style="text-align:center;font-size:50px;">五子棋-人机对战</h1>
 <br/><b id="message">下棋方：黑棋</b>
 <br/><b id="message2"></b>
 <br>
 <canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:8px;top:239px;">你的浏览器不支持“五子棋”，请切换浏览器。</canvas>
-<p style="position:absolute;top:739px;">步数：<span id="length">0</span></p>
+<b style="position:absolute;top:739px;">步数：<span id="length">0</span></b>
 
+<noscript><h1>错误！你的浏览器不支持JavaScript，无法使用《五子棋》！</h1></noscript>
 <script>
 {
 	let message="五子棋人机对战模式";
@@ -66,48 +74,54 @@ button{
 	},300); 
 }
 
-if (Math.round(Math.random()) == 0){
-	computer="黑棋";
-	document.getElementById("message2").innerHTML="电脑执黑棋";
-	document.getElementById("message2").style="color:black;background-color:white";
-}else{
-	computer="白棋";
-	document.getElementById("message2").innerHTML="电脑执白棋";
-	document.getElementById("message2").style="color:white;background-color:black";
-}
+var type="loading"; //状态
+var xqf; //下棋方
+var computer; //电脑
+var qz; //棋子
 
-xqf="黑棋"; //下棋方
 var message=document.getElementById("message");
-var length=document.getElementById("length");
-message.innerHTML="下棋方："+xqf;
+var length=document.getElementById("length"); //下棋数
 
-type="loading"; //状态
-length.innerHTML=0; //步数
-qz=new Array;
-for (var i=-5;i<19+5;i++){
-	qz[i]=new Array;
-	for (var j=-5;j<19+5;j++){
-		if (i < 0 | i >= 19 | j < 0 | j >= 19){
-			qz[i][j]=undefined;
-		}else{
-			qz[i][j]="";
+var ctx=document.getElementById("qp").getContext("2d");
+ctx.font="66px fzybxskt";
+ctx.fillText("棋盘加载中……",0,200);
+
+var img=new Image();
+img.src="./drawable/qp.jpg";
+img.onload=init;
+function init(){
+	if (Math.round(Math.random()) == 0){
+		computer="黑棋";
+		document.getElementById("message2").innerHTML="电脑执黑棋";
+		document.getElementById("message2").style="color:black;background-color:white";
+	}else{
+		computer="白棋";
+		document.getElementById("message2").innerHTML="电脑执白棋";
+		document.getElementById("message2").style="color:white;background-color:black";
+	}
+	
+	xqf="黑棋";
+	message.innerHTML="下棋方："+xqf;
+	
+	length.innerHTML=0; //步数
+	qz=new Array;
+	for (var i=-5;i<19+5;i++){
+		qz[i]=new Array;
+		for (var j=-5;j<19+5;j++){
+			if (i < 0 | i >= 19 | j < 0 | j >= 19){
+				qz[i][j]=undefined;
+			}else{
+				qz[i][j]="";
+			}
 		}
 	}
-}
-var ctx=document.getElementById("qp").getContext("2d");
-ctx.font="30px Arial";
-ctx.fillText("棋盘加载中……",100,200);
-
-var img=new Image;
-img.src="qp.jpg";
-img.onload = function() {
+	
 	ctx.drawImage(img,0,0);
 	type="playing";
 	if (computer == xqf){
 		computer_play();
 	}
-} //加载棋盘图片
-
+}
 document.onmousedown = function(e){
 	var y=Math.round((e.pageX-37.7)/24.5);
 	var x=Math.round((e.pageY-270)/24.5);
@@ -164,7 +178,7 @@ document.onmousedown = function(e){
 			}
 		}
 	}
-}
+};
 
 function computer_play(){
 	var max=-1;
@@ -337,12 +351,12 @@ function computer_play(){
 }
 
 /*
-　┐ ├┬─┐ ┌──┼┼┐
-　│ ││　 ┌──┼┼┐
-  │╯├─┐ ╭──┴╯   W
-  └╯│   ┌────┐    Z
-　│　├─┐ ├────┤    H
-　╰┘└　 └────╯      656
+　┐ ├┬─┐ ┌──┼┼┐	w
+　│ ││　 ┌──┼┼┐	z
+  │╯├─┐ ╭──┴╯		h
+  └╯│   ┌────┐		6
+　│　├─┐ ├────┤	5
+　╰┘└　 └────╯		6
 © by WZH656
 此文件为WZH656所有
 禁止任何修改，抄袭！
