--- a/one1.html
+++ b/one1.html
@@ -87,7 +87,7 @@ ctx.font="66px fzybxskt";
 ctx.fillText("棋盘加载中……",0,200);
 
 var img=new Image();
-img.src="./drawable/qp.jpg";
+img.src="./image/qp.jpg";
 img.onload=init;
 function init(){
 	if (Math.round(Math.random()) == 0){
