--- a/two.html
+++ b/two.html
@@ -88,7 +88,7 @@ ctx.font="30px Arial";
 ctx.fillText("棋盘加载中……",100,200);
 
 var img=new Image;
-img.src="qp.jpg";
+img.src="./image/qp.jpg";
 img.onload = function() {
 	ctx.drawImage(img,0,0);
 } //加载棋盘图片
