--- a/sign.html
+++ b/sign.html
@@ -37,7 +37,7 @@ button{
 
 <script src="./js/msgbox.js"></script>
 <script src="./js/jq.js"></script>
-<script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 
 <!--
 <script src="//cdn.jsdelivr.net/npm/eruda"></script>
