--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8" />
-<meta content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
-<title>五子棋</title>
-<link href="./css/title.css" rel="stylesheet" type="text/css" />
-<link href="./css/button.css" rel="stylesheet" type="text/css" />
-<link href="./css/clear.css" rel="stylesheet" type="text/css" />
-
-<script src="./js/choice.js"></script>
-<script src="./js/jq.js"></script>
-
-<!--
-<script src="//cdn.jsdelivr.net/npm/eruda"></script>
-<script>
-eruda.init();
-console.log('控制台打印信息');
-</script>
--->
-
+	<head>
+		<meta charset="UTF-8" />
+		<meta content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+		<title>五子棋</title>
+		<link href="./css/title.css" rel="stylesheet" type="text/css" />
+		<link href="./css/button.css" rel="stylesheet" type="text/css" />
+		<link href="./css/clear.css" rel="stylesheet" type="text/css" />
+		
+		<script src="./js/choice.js"></script>
+		<script src="./js/jq.js"></script>
+		
+		<!--
+		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+		<script>
+		eruda.init();
+		console.log('控制台打印信息');
+		</script>
+		-->
+		
 <style>
-img{
+body{
+	background-image:url("./image/background1.jpg");
+}
+@media not screen and (orientation:portrait){
+	body{
+		background-image:url("./image/background2.jpg");
+	}
+}
+body{
 	position:absolute;
 	left:0px;
 	top:0px;
 	width:100%;
 	height:100%;
 	z-index:-1;
-	margin:auto;
+	margin:0 auto;
+	
+	background-size:cover;
 }
 h1{
 	margin:0px;
@@ -57,54 +67,38 @@ div button{
 	align-items:center;
 }
 </style>
+		
+	</head>
+	<body>
+		
+		<button style="float:right;z-index:1;height:66px;width:66px;border-radius:50%;padding:0;">SHARE</button>
+		<div class="box">
+			<h1 id="h1">五子棋</h1>
+			<button
+				onclick="location.href='./two.html';"
+				title="点击进入双人对战">
+				双人对战
+			</button>
+			<button
+				onclick="location.href='./one1.html';"
+				title="点击进入人机对战（算法1）">
+				人机对战（简单）
+			</button>
+			<button
+				onclick="location.href='./one2.html';"
+				title="点击进入人机对战（算法2）">
+				人机对战（中级）
+			</button>
+			<button
+				onclick="location.href='./sign.html';"
+				title="登录账号以联机对战">
+				登录/联机
+			</button>
+		</div>
+		
+		<noscript><h1>错误！你的浏览器不支持JavaScript，无法使用《五子棋》！</h1></noscript>
 
-</head>
-<body>
 
-<img id="img" src="./image/background2.jpg"/>
-<button style="float:right;z-index:1;">SHARE</button>
-<div class="box">
-	<h1 id="h1">五子棋</h1>
-	<button
-		onclick="location.href='./two.html';"
-		title="点击进入双人对战">
-		双人对战
-	</button>
-	<button
-		onclick="location.href='./one1.html';"
-		title="点击进入人机对战（算法1）">
-		人机对战（简单）
-	</button>
-	<button
-		onclick="location.href='./one2.html';"
-		title="点击进入人机对战（算法2）">
-		人机对战（中级）
-	</button>
-	<button
-		onclick="location.href='./sign.html';"
-		title="登录账号以联机对战">
-		登录/联机
-	</button>
-</div>
-
-<noscript><h1>错误！你的浏览器不支持JavaScript，无法使用《五子棋》！</h1></noscript>
-<script>
-if (screen.availHeight < screen.availWidth){
-	$("#img")[0].src="./image/background2.jpg";
-	console.log("横屏（电脑）");
-}else{
-	$("#img")[0].src="./image/background1.jpg";
-	console.log("竖屏（手机）");
-}
-
-setInterval(function(){
-	if (screen.availHeight < screen.availWidth){
-		$("#img")[0].src="./image/background2.jpg";
-	}else{
-		$("#img")[0].src="./image/background1.jpg";
-	}
-},2000);
-</script>
 <script>
 {
 	let message="五子棋";
@@ -192,6 +186,6 @@ $("body").find("button:eq(0)").click(function(){
 禁止任何修改，抄袭！
 */
 </script>
-
-</body>
+		
+	</body>
 </html>
