--- a/online.html
+++ b/online.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>五子棋-双人对战</title>
-<link href="./css/title.css" rel="stylesheet" type="text/css" />
-<link href="./css/button.css" rel="stylesheet" type="text/css" />
-<link href="./css/p.css" rel="stylesheet" type="text/css" />
-<link href="./css/clear.css" rel="stylesheet" type="text/css" />
-
-<script src="//cdn.jsdelivr.net/npm/eruda"></script>
-<script>
-eruda.init();
-console.log('控制台打印信息');
-</script>
-
+	<head>
+		<meta charset="UTF-8">
+		<title>五子棋-双人对战</title>
+		<link href="./css/title.css" rel="stylesheet" type="text/css" />
+		<link href="./css/button.css" rel="stylesheet" type="text/css" />
+		<link href="./css/p.css" rel="stylesheet" type="text/css" />
+		<link href="./css/clear.css" rel="stylesheet" type="text/css" />
+		
+		<script src="/socket.io/socket.io.js"></script>
+		
+		
+		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+		<script>
+		eruda.init();
+		console.log('控制台打印信息');
+		</script>
+		
+		
 <style>
 @font-face{
 	font-family:fzybxskt; /*方正硬笔行书楷体*/
@@ -30,19 +34,20 @@ button{
 	line-height:20px;
 }
 </style>
-</head>
-<body>
+	</head>
+	<body>
+	
+		<button onclick="location.href='./index.html';" id="back">返回</button>
+		<button onclick="init();" id="again_two">重来</button>
+		
+		<h1 id="h1" style="text-align:center;font-size:50px;">五子棋-双人对战</h1>
+		<br/><b id="message" style="position:absolute;top:190px;">下棋方：黑棋</b>
+		<br>
+		<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:10px;top:216px;">你的浏览器不支持“五子棋”，请切换浏览器。</canvas>
+		<b style="position:absolute;top:716px;">步数：<span id="length">0</span></b>
+		
+		<noscript><h1>错误！你的浏览器不支持JavaScript，无法使用《五子棋》！</h1></noscript>
 
-<button onclick="location.href='./index.html';" id="back">返回</button>
-<button onclick="init();" id="again_two">重来</button>
-
-<h1 id="h1" style="text-align:center;font-size:50px;">五子棋-双人对战</h1>
-<br/><b id="message" style="position:absolute;top:190px;">下棋方：黑棋</b>
-<br>
-<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:10px;top:216px;">你的浏览器不支持“五子棋”，请切换浏览器。</canvas>
-<b style="position:absolute;top:716px;">步数：<span id="length">0</span></b>
-
-<noscript><h1>错误！你的浏览器不支持JavaScript，无法使用《五子棋》！</h1></noscript>
 <script>
 {
 	let message="五子棋双人对战模式";
@@ -112,9 +117,6 @@ function init(){
 	
 	ctx.drawImage(img,0,0);
 	over=false;
-	if (computer == xqf){
-		computer_play();
-	}
 }
 
 document.onmousedown = function(e){
@@ -184,8 +186,7 @@ document.onmousedown = function(e){
 此文件为WZH656所有
 禁止任何修改，抄袭！
 */
-
 </script>
-
-</body>
+		
+	</body>
 </html>
