--- a/sign.html
+++ b/sign.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8" />
-<title>五子棋</title>
-<link href="./css/title.css" rel="stylesheet" type="text/css" />
-<link href="./css/button.css" rel="stylesheet" type="text/css" />
-<link href="./css/p.css" rel="stylesheet" type="text/css" />
-<link href="./css/clear.css" rel="stylesheet" type="text/css" />
-<meta content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
-
+	<head>
+		<meta charset="UTF-8" />
+  		<meta content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+		<title>五子棋</title>
+		<link href="./css/title.css" rel="stylesheet" type="text/css" />
+		<link href="./css/button.css" rel="stylesheet" type="text/css" />
+		<link href="./css/p.css" rel="stylesheet" type="text/css" />
+		<link href="./css/clear.css" rel="stylesheet" type="text/css" />
+		
 <style>
 h1{
 	font-size:50px;
@@ -30,166 +30,254 @@ button{
 	width:32%;
 	height:66px;
 	background:#70c3ff;
-	font-size:200%;
+	font-size:160%;
 	border-radius:40px;
 }
 </style>
+		
+		<script src="./js/msgbox.js"></script>
+		<script src="./js/jq.js"></script>
+		<script src="/socket.io/socket.io.js"></script>
+		
+		
+		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+		<script>
+		eruda.init();
+		console.log('控制台打印信息');
+		</script>
+		
+		
+	</head>
+	<body>
+	
+		<h1>联机对战</h1>
+		<b>黑方：</b><p id='black'></p>
+		<b>白方：</b><p id='white'></p>
+		<b id='state'>没有服务器信息</b><br/>
+		
+		<button onclick='location.href="./index.html";'>返回</button>
+		<button onclick='location.reload(true);'>刷新</button>
+		<button onclick='rename(prompt("请输入更改后的名称", id));'>重命名</button>
+		<noscript><h1>错误！你的浏览器不支持JavaScript，无法使用《五子棋》！</h1></noscript>
 
-<script src="./js/msgbox.js"></script>
-<script src="./js/jq.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-
-<!--
-<script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>
-eruda.init();
-console.log('控制台打印信息');
-</script>
--->
+try{
+	
+	var socket=io();
 
-</head>
-<body>
-
-<h1>联机对战</h1>
-<b>黑方：</b><p id='black'></p>
-<b>白方：</b><p id='white'></p>
-<b id='state'></b><br/>
-<button onclick='location.href="./index.html";'>返回</button>
-<button onclick='location.reload(true);'>刷新</button>
-<button ocnlick='rename();'>重命名</button>
-<noscript><h1>错误！你的浏览器不支持JavaScript，无法使用《五子棋》！</h1></noscript>
-
-<script>
-var socket=io();
-
-var connect=new Msgbox(
-	{
-		name:"连接服务器中……",
-		color:"#a88",
-		font_size:"36px"
-	},{
-		name:"若一直无法连接服务器，请检查是否开启或连接到了服务器。"
-	},[
+	var connect=new Msgbox(
 		{
-			name:"退出",
-			width:"50%",
-			onclick:function(){
-				socket.emit('exit', id);
-				location.href="index.html";
-			}
+			name:"连接服务器中……",
+			color:"#a88",
+			font_size:"36px"
 		},
 		{
-			name:"刷新",
-			width:"50%",
-			onclick:function(){
-				location.reload(true);
-				socket.emit('exit', id);
+			name:"若一直无法连接服务器，请检查是否开启或连接到了服务器。"
+		},
+		[
+			{
+				name:"退出",
+				width:"50%",
+				onclick:function(){
+					exit();
+					location.href="index.html";
+				}
+			},
+			{
+				name:"刷新",
+				width:"50%",
+				onclick:function(){
+					location.reload(true);
+					exit();
+				}
+			}
+		],
+		"loading",
+		function(){}
+	).show();
+
+	setInterval(function(){
+		if (socket.connected){
+			if (connect.state){ //未关闭
+				connect.close();
+			}
+		}else{
+			if (!connect.state){ //未开启
+				connect.show();
 			}
 		}
-	],
-	"loading",
-	function(){}
-).show();
+	},1000*2);
 
-setInterval(function(){
-	if (socket.connected){
-		if (connect.state){ //未关闭
-			connect.close();
-		}
-	}else{
-		if (!connect.state){ //未开启
-			connect.show();
-		}
-	}
-},1000*2);
+	var id;
+	var player=[null, null];
 
-var id;
-var player=[null, null];
-
-var get_id=new Msgbox(
-	{
-		name:"获取ID中……",
-		color:"#a88",
-		font_size:"36px"
-	},{
-		name:"若一直无法获取ID，请检查是否开启或连接到了服务器。"
-	},[
+	var get_id=new Msgbox(
 		{
-			name:"退出",
-			width:"50%",
-			onclick:function(){
-				socket.emit('exit', id);
-				location.href="index.html";
-			}
+			name:"获取ID中……",
+			color:"#a88",
+			font_size:"36px"
 		},
 		{
-			name:"刷新",
-			width:"50%",
-			onclick:function(){
-				socket.emit('exit', id);
-				location.reload(true);
+			name:"若一直无法获取ID，请检查是否开启或连接到了服务器。"
+		},
+		[
+			{
+				name:"退出",
+				width:"50%",
+				onclick:function(){
+					exit();
+					location.href="index.html";
+				}
+			},
+			{
+				name:"刷新",
+				width:"50%",
+				onclick:function(){
+					exit();
+					location.reload(true);
+				}
 			}
-		}
-	],
-	"loading",
-	function(){}
-).show();
+		],
+		"loading",
+		function(){}
+	).show();
 
-socket.on('id',function (data){
-	id=data;
-	get_id.close();
-});
+	socket.on('id',function (data){
+		id=data;
+		get_id.close();
+	});
 
-document.onkeydown=function (){ //禁用F5刷新
-	if (event.keyCode == 116){ //F5
-		alert('F5刷新已禁用');
-		event.keyCode = 0;
-		event.cancelBubble = true;
-		return false;
+	function rename(name){
+		socket.emit('rename', id, name);
+		id = name;
 	}
-}
 
-window.onbeforeunload=exit; //退出前发送退出信息
-function exit(){
-	socket.emit('exit', id);
-}
+	document.onkeydown=function (){ //禁用F5刷新
+		if (event.keyCode == 116){ //F5
+			alert('F5刷新已禁用');
+			event.keyCode = 0;
+			event.cancelBubble = true;
+			return false;
+		}
+	};
 
-socket.on('player', function(data){
-	player=data;
-	$('#black').html(player[0]);
-	$('#white').html(player[1]);
-	
-	if (player[0] == id){
-		$('#black')[0].innerHTML+='（我）';
-		$('#state').html('你被分配为黑方');
-		if (player[1] != null) { //匹配成功
-			$('#state').html('匹配成功，点击开始游戏');
+	window.onbeforeunload=exit; //退出前发送退出信息
+	function exit(){
+		socket.emit('exit', id);
+	}
+
+	socket.on('player', function(data){
+		player=data;
+		$('#black').html(player[0]);
+		$('#white').html(player[1]);
+		
+		if (player[0] == id){
+			$('#black')[0].innerHTML+='（我）';
+			$('#state').html('你被分配为黑方');
+			if (player[1] != null) { //匹配成功
+				$('#state').html('匹配成功，点击开始游戏');
+				setInterval(function (){
+					alert('匹配成功，点击开始游戏');
+				});
+				location.href='online.html?type=black&id='+id;
+			}
+		
+		}else if (player[1] == id){
+			$('#white')[0].innerHTML+='（我）';
+			$('#state').html('你被分配为白方');
+			if (player[0] != null) { //匹配成功
+				$('#state').html('匹配成功，点击开始游戏');
+				setInterval(function (){
+					alert('匹配成功，点击开始游戏');
+				});
+				location.href='online.html?type=white&id='+id;
+			}
+		
+		}else{
+			$('#state').html('已匹配结束，你被分配为观战方');
 			setInterval(function (){
-				alert('匹配成功，点击开始游戏');
+				alert('已匹配结束，你被分配为观战方');
 			});
-			location.href='online.html?type=black&id='+id;
+			location.href='online.html?type=watcher';
 		}
-	
-	}else if (player[1] == id){
-		$('#white')[0].innerHTML+='（我）';
-		$('#state').html('你被分配为白方');
-		if (player[0] != null) { //匹配成功
-			$('#state').html('匹配成功，点击开始游戏');
-			setInterval(function (){
-				alert('匹配成功，点击开始游戏');
-			});
-			location.href='online.html?type=white&id='+id;
-		}
-	
+	});
+
+}catch(err){
+	if (err == "ReferenceError: io is not defined"){
+		new Msgbox(
+			{
+				name:"错误",
+				color:"#a88",
+				font_size:"36px"
+			},
+			{
+				name:"请使用正确的方式（ip:端口）访问此页面，或你的浏览器不支持此页面。（"+err+"）",
+				height:"auto",
+				width:"95%"
+			},
+			[
+				{
+					name:"退出",
+					width:"100%",
+					onclick:function(){
+						location.href="index.html";
+					}
+				}
+			],
+			"error",
+			function(){}
+		).show();
 	}else{
-		$('#state').html('已匹配结束，你被分配为观战方');
-		setInterval(function (){
-			alert('已匹配结束，你被分配为观战方');
-		});
-		location.href='online.html?type=watcher';
+		new Msgbox(
+			{
+				name:"错误",
+				color:"#a88",
+				font_size:"36px"
+			},
+			{
+				name:"出现未知错误（"+err+"），是否发送错误报告",
+				height:"auto",
+				width:"95%"
+			},
+			[
+				{
+					name:"退出",
+					width:"50%",
+					onclick:function(){
+						location.href="index.html";
+					}
+				},
+				{
+					name:"发送错误报告",
+					width:"50%",
+					onclick:function(){
+						$.post(
+							"https://api.s.wps.cn/api/form/163adb6f/mainPreview",
+							{url:"gobang/sign.html",type:"error_message",error_message:err},
+							function (data, staus, xhr){
+								if (staus == "success"){
+									if (data == '{"result":"ok"}'){
+										alert("发送成功！");
+										location.href="index.html";
+									}else{
+										alert("发送服务器错误");
+										location.href="index.html";
+									}
+								}else{
+									alert("发送错误");
+									location.href="index.html";
+								}
+							}
+						)
+					}
+				}
+			],
+			"error",
+			function(){}
+		).show();
 	}
-});
-
+}
 </script>
-</body>
+	
+	</body>
 </html>
