--- a/index.html
+++ b/index.html
@@ -20,14 +20,71 @@
 		-->
 		
 <style>
+/*手机*/
 body{
 	background-image: url("./image/background1.jpg");
 }
+h1{
+	font-size: 400%;
+}
+button{
+	font-size: 115%;
+}
+img{
+	height: 50px;
+	width: 50px;
+}
+img:nth-child(2){
+	right: 0px;
+}
+img:nth-child(3){
+	right: 50px;
+}
+
+/*宽>高（电脑）*/
 @media not screen and (orientation: portrait){
 	body{
 		background-image: url("./image/background2.jpg");
 	}
+	h1{
+		font-size: 500%;
+	}
+	button{
+		font-size: 200%;
+	}
+	img{
+		height: 100px;
+		width: 100px;
+	}
+	img:nth-child(2){
+		right: 0px;
+	}
+	img:nth-child(3){
+		right: 100px;
+	}
 }
+
+/*0.6<宽/高<1（平板）*/
+@media screen and (max-aspect-ratio:100/100) and (min-aspect-ratio:60/100){
+	h1{
+		font-size: 600%;
+	}
+	button{
+		font-size: 260%;
+	}
+	img{
+		height: 100px;
+		width: 100px;
+	}
+	img:nth-child(2){
+		right: 0px;
+	}
+	img:nth-child(3){
+		right: 100px;
+	}
+}
+
+/*通用*/
 body{
 	position: absolute;
 	left: 0px;
@@ -35,30 +92,7 @@ body{
 	width: 100%;
 	height: 100%;
 	z-index: -1;
-	margin: 0 auto;
-	
-	background-size: cover;
-}
-h1{
-	margin: 0px;
-	font-size: 400%;
-}
-button{
-	width: 50%;
-	height: 12%;
-	color: white;
-	background-color: #6a8;
-	font-size: 126%;
-	border: 2px solid #8a8;
-	border-radius: 40px;
-	
-	text-align: center;
-	line-height: 60px;
-}
-body{
-	position: absolute; /*脱离文档流以实现height: 100%*/
-	width: 100%;
-	height: 100%;
+	margin: auto;
 	
 	display: flex; /*flex布局*/
 	flex-direction: column; /*↓*/
@@ -66,20 +100,40 @@ body{
 	justify-content: space-around;
 	align-items: center;
 }
+h1{
+	margin: 0px;
+}
+button{
+	width: 50%;
+	height: 12%;
+	color: white;
+	background-color: #6a8;
+	border: 2px solid #8a8;
+	border-radius: 50px;
+	
+	text-align: center;
+	line-height: 60px;
+}
 img{
 	position: absolute;
 	top: 0px;
-	height: 50px;
-	width: 50px;
 	border-radius: 50%;
+	z-index: -1;
 }
 </style>
 		
 	</head>
 	<body>
 		
-		<img style="right: 0px;" src="./image/icon/share.jpg" alt="share" />
-		<img style="right: 50px;" src="./image/icon/set.png" alt="share" />
+		<script>
+document.body.style.backgroundSize=`${document.body.scrollWidth}px ${document.body.scrollHeight}px`;
+window.onresize = function(){
+	document.body.style.backgroundSize=`${document.body.scrollWidth}px ${document.body.scrollHeight}px`;
+}
+		</script>
+		
+		<img src="./image/icon/share.jpg" alt="share" />
+		<img src="./image/icon/set.png" alt="share" />
 		<h1 id="h1">五子棋</h1>
 		<button
 			onclick="location.href='./two.html';"
