--- a/one1.html
+++ b/one1.html
@@ -17,15 +17,34 @@ console.log('控制台打印信息');
 <style>
 @font-face{
 	font-family:fzybxskt; /*方正硬笔行书楷体*/
-	src:url("../fonts/fzybxskt.ttf");
+	src:url("./fonts/fzybxskt.ttf");
 }
 
+/*手机*/
+h1{
+	font-size: 40px;
+}
+
+/*宽>高（电脑）*/
+@media not screen and (orientation: portrait){
+	h1{
+		font-size: 60px;
+	}
+}
+
+/*0.6<宽/高<1（平板）*/
+@media screen and (max-aspect-ratio:100/100) and (min-aspect-ratio:60/100){
+	h1{
+		font-size:50px;
+	}
+}
+
+/*通用*/
 button{
+	height:36px;
 	color:white;
 	background-color:#6a8;
 	/*border-radius:40px;*/
-	height:33px;
-	text-align:center;
 	line-height:20px;
 }
 </style>
@@ -36,7 +55,7 @@ button{
 <button onclick="init();" id="again_two">重来</button>
 <button onclick="clear_data();">清除胜率数据</button>
 
-<h1 id="h1" style="text-align:center;font-size:50px;">五子棋-人机对战</h1>
+<h1 id="h1">五子棋-人机对战</h1>
 <b id="message" style="position:absolute;top:200px;">下棋方：黑棋</b>
 <b id="message2" style="position:absolute;top:220px;"></b>
 <b id="win" style="border:1px solid black;position:absolute;top:150px;left:384px;height:89px;width:124px;display:flex;/*flex布局*/flex-direction:column;/*↓*/justify-content:space-around;align-items:center;">
