--- a/one2.html
+++ b/one2.html
@@ -17,15 +17,34 @@ console.log('控制台打印信息');
 <style>
 @font-face{
 	font-family:fzybxskt; /*方正硬笔行书楷体*/
-	src:url("../fonts/fzybxskt.ttf");
+	src:url("./fonts/fzybxskt.ttf");
 }
 
+/*手机*/
+h1{
+	font-size: 40px;
+}
+
+/*宽>高（电脑）*/
+@media not screen and (orientation: portrait){
+	h1{
+		font-size: 60px;
+	}
+}
+
+/*0.6<宽/高<1（平板）*/
+@media screen and (max-aspect-ratio:100/100) and (min-aspect-ratio:60/100){
+	h1{
+		font-size:50px;
+	}
+}
+
+/*通用*/
 button{
+	height:36px;
 	color:white;
 	background-color:#6a8;
 	/*border-radius:40px;*/
-	height:33px;
-	text-align:center;
 	line-height:20px;
 }
 </style>
